refactor: add userId in SecurityUser entity and add SecurityUserId in user entity

--- a/docs/분산트랜잭션.md
+++ b/docs/분산트랜잭션.md
@@ -58,7 +58,7 @@ public User(String name, Sex sex, String phoneNum, String location, Integer age)
 ```java
 package org.codenbug.user.app;
 
-import org.codenbug.message.UserRegisteredEvent;
+import org.codenbug.message.SecurityUserRegisteredEvent;
 import org.codenbug.user.domain.Sex;
 import org.codenbug.user.domain.User;
 import org.codenbug.user.domain.UserId;
